subiendo la 1ra fila del gridsystem

--- a/index.html
+++ b/index.html
@@ -60,6 +60,43 @@
 	    <span class="sr-only">Next</span>
 	  </a>
 		</div>
+		<div class="container">
+		<div class="row">
+			<div class="col-md-3 col-sm-4">
+				<div class="display">
+					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<div class="overlay"></div>
+				</div>
+				<h3>Imagen1</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			<div class="col-md-3 col-sm-4">
+				<div class="display">
+					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<div class="overlay"></div>
+				</div>
+				<h3>Imagen2</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			<div class="col-md-3 col-sm-4">
+				<div class="display">
+					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<div class="overlay"></div>
+				</div>
+				<h3>Imagen3</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			<div class="col-md-3 col-sm-4">
+				<div class="display">
+					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<div class="overlay"></div>
+				</div>
+				<h3>Imagen4</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+		</div>
+	</div>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> 
 	</body>
