coloque imagenes en la primera fila del grydsystem

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-4">
 				<div class="display">
-					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<img class="img-responsive" src="img/foto1.png">
 					<div class="overlay"></div>
 				</div>
 				<h3>Imagen1</h3>
@@ -72,7 +72,7 @@
 			</div>
 			<div class="col-md-3 col-sm-4">
 				<div class="display">
-					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<img class="img-responsive" src="img/foto2.png">
 					<div class="overlay"></div>
 				</div>
 				<h3>Imagen2</h3>
@@ -80,7 +80,7 @@
 			</div>
 			<div class="col-md-3 col-sm-4">
 				<div class="display">
-					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<img class="img-responsive" src="img/foto3.png">
 					<div class="overlay"></div>
 				</div>
 				<h3>Imagen3</h3>
@@ -88,7 +88,7 @@
 			</div>
 			<div class="col-md-3 col-sm-4">
 				<div class="display">
-					<img class="img-responsive" src="imagenes/sailor4.jpg">
+					<img class="img-responsive" src="img/foto1.png">
 					<div class="overlay"></div>
 				</div>
 				<h3>Imagen4</h3>
