inserte el footer

--- a/index.html
+++ b/index.html
@@ -61,74 +61,107 @@
 	  </a>
 		</div>
 		<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img class="img-responsive" src="img/foto1.png">
-					<div class="overlay"></div>
+		  <div class="row">
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img class="img-responsive" src="img/foto1.png">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen1</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen1</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img class="img-responsive" src="img/foto2.png">
-					<div class="overlay"></div>
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img class="img-responsive" src="img/foto2.png">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen2</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen2</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img class="img-responsive" src="img/foto3.png">
-					<div class="overlay"></div>
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img class="img-responsive" src="img/foto3.png">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen3</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen3</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img class="img-responsive" src="img/foto1.png">
-					<div class="overlay"></div>
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img class="img-responsive" src="img/foto1.png">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen4</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen4</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img src="img/foto4.jpg">
-					<div class="overlay"></div>
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img src="img/foto4.jpg">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen5</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen5</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img src="img/foto5.jpg">
-					<div class="overlay"></div>
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img src="img/foto5.jpg">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen6</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen6</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img src="img/foto4.jpg">
-					<div class="overlay"></div>
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img src="img/foto4.jpg">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen7</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen7</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="col-md-3 col-sm-4">
-				<div class="display">
-					<img src="img/foto5.jpg">
-					<div class="overlay"></div>
+				<div class="col-md-3 col-sm-4">
+					<div class="display">
+						<img src="img/foto5.jpg">
+						<div class="overlay"></div>
+					</div>
+					<h3>Imagen8</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
-				<h3>Imagen8</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		  </div>
+	  </div>
+  	<div class="footer">
+			<div class="container ">
+				<div class="row">
+					<div class="col-md-3 ">
+					  <div class="text"> 
+					  		<h5> CONTACTOS</h5>
+								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+						</div>
+			 	  </div>
+			 	  <div class="col-md-3">
+					  <div class="text"> 
+					  		<h5> CATEGORIAS</h5>
+								Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+						</div>
+			 	  </div>
+			 	  <div class="col-md-3">
+					  <div class="text"> 
+					  		<h5> CATEGORIAS</h5>
+								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+						</div>
+			 	  </div>
+			 	  <div class="col-md-3 col-md-3">
+					  <div class="text"> 
+					  		<h5> REDES</h5>
+					  		<div class="redes-footer"> 
+									<img src="img/fb.png">
+									<img src="img/inst.png">
+									<img src="img/twitter.png">
+							  </div>
+			 	  	</div>
+			 		</div> 
+		 	 </div>
 			</div>
-
 		</div>
-	</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> 
