--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 				    <span class="icon-bar"></span>
 				    <span class="icon-bar"></span>
 			    </button>
-				  <a class="navbar-brand" href="#">Brand</a>
+				  <div class="logo">
+				  	<img src="img/logo-flor.png">
+				  </div>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav navbar-nav">
@@ -52,11 +54,11 @@
 	 	  </div>
   		<!-- Left and right controls -->
 	  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	    <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
 	    <span class="sr-only">Previous</span>
 	  </a>
 	  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	    <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
 	    <span class="sr-only">Next</span>
 	  </a>
 		</div>
