--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
 				<div class="row">
 					<div class="col-sm-4 col-md-3">
 						<h5>Texto</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure. Maiores sapiente inventore saepe qui iste voluptatum nemo.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure.</p>
 					</div>
 					<div class="col-sm-4 col-md-3">
 						<h5>Texto</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure. Maiores sapiente inventore saepe qui iste voluptatum nemo.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure.</p>
 					</div>
 					<div class="col-sm-4 col-md-3 hidden-xs hidden-sm">
 						<h5>Texto</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure. Maiores sapiente inventore saepe qui iste voluptatum nemo.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure. </p>
 					</div>
 					<div class="col-sm-4 col-md-3 text-center">
-						<h4>Redes Sociales</h4>
+						<h5>Redes Sociales</h5>
 						<img class="img-circle" src="img/facebook.png" alt="Mixi4">
 						<img class="img-circle" src="img/twitter.png" alt="Mixi4">
 					</div>
