--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</div>
 				<div class="col-md-3 col-sm-4">
 					<div class="display">
-						<img src="img/foto4.jpg">
+						<img class="img-responsive" src="img/foto1.png">
 						<div class="overlay"></div>
 					</div>
 					<h3>Imagen5</h3>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="col-md-3 col-sm-4">
 					<div class="display">
-						<img src="img/foto5.jpg">
+						<img class="img-responsive" src="img/foto2.png">
 						<div class="overlay"></div>
 					</div>
 					<h3>Imagen6</h3>
@@ -114,7 +114,7 @@
 				</div>
 				<div class="col-md-3 col-sm-4">
 					<div class="display">
-						<img src="img/foto4.jpg">
+						<img class="img-responsive" src="img/foto3.png">
 						<div class="overlay"></div>
 					</div>
 					<h3>Imagen7</h3>
@@ -122,7 +122,7 @@
 				</div>
 				<div class="col-md-3 col-sm-4">
 					<div class="display">
-						<img src="img/foto5.jpg">
+						<img class="img-responsive" src="img/foto1.png">
 						<div class="overlay"></div>
 					</div>
 					<h3>Imagen8</h3>
