Footer responsive logos pequeños

--- a/index.html
+++ b/index.html
@@ -130,38 +130,27 @@
 				</div>
 		  </div>
 	  </div>
-  	<div class="footer">
-			<div class="container ">
+		<div class="piepagina">
+			<div class="gridpie">
 				<div class="row">
-					<div class="col-md-3 ">
-					  <div class="text"> 
-					  		<h5> CONTACTOS</h5>
-								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-						</div>
-			 	  </div>
-			 	  <div class="col-md-3">
-					  <div class="text"> 
-					  		<h5> CATEGORIAS</h5>
-								Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-						</div>
-			 	  </div>
-			 	  <div class="col-md-3">
-					  <div class="text"> 
-					  		<h5> CATEGORIAS</h5>
-								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-						</div>
-			 	  </div>
-			 	  <div class="col-md-3 col-md-3">
-					  <div class="text"> 
-					  		<h5> REDES</h5>
-					  		<div class="redes-footer"> 
-									<img src="img/fb.png">
-									<img src="img/inst.png">
-									<img src="img/twitter.png">
-							  </div>
-			 	  	</div>
-			 		</div> 
-		 	 </div>
+					<div class="col-sm-4 col-md-3">
+						<h5>Texto</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure. Maiores sapiente inventore saepe qui iste voluptatum nemo.</p>
+					</div>
+					<div class="col-sm-4 col-md-3">
+						<h5>Texto</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure. Maiores sapiente inventore saepe qui iste voluptatum nemo.</p>
+					</div>
+					<div class="col-sm-4 col-md-3 hidden-xs hidden-sm">
+						<h5>Texto</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, cumque neque architecto iure. Maiores sapiente inventore saepe qui iste voluptatum nemo.</p>
+					</div>
+					<div class="col-sm-4 col-md-3 text-center">
+						<h4>Redes Sociales</h4>
+						<img class="img-circle" src="img/facebook.png" alt="Mixi4">
+						<img class="img-circle" src="img/twitter.png" alt="Mixi4">
+					</div>
+				</div>
 			</div>
 		</div>
 
